--- a/package.json
+++ b/package.json
@@ -37,11 +37,14 @@
     "class-validator": "^0.14.0",
     "handlebars": "^4.7.8",
     "mysql2": "^3.6.5",
+    "nest-winston": "^1.9.4",
     "nestjs-prisma": "^0.22.0",
     "nodemailer": "^6.9.7",
     "prisma": "^5.7.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "winston": "^3.11.0",
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
