--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "route:list": "TS_NODE_PROJECT=./tsconfig.json ts-node -r tsconfig-paths/register ./src/main-cli.ts",
-    "cmd": "node -r tsconfig-paths/register -r ts-node/regsister ./src/main-cli.ts"
+    "cmd": "node -r tsconfig-paths/register -r ts-node/regsister ./src/main-cli.ts",
+    "migrate": "npx prisma migrate deploy",
+    "db:seed": "npx ts-node ./src/seed.ts"
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^1.10.3",
