--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/sequelize": "^10.0.0",
+    "@nestjs/swagger": "^7.1.17",
     "@prisma/client": "^5.7.1",
     "argon2": "^0.31.2",
     "bull": "^4.12.0",
